bugfix puzzle piece icon rendered behind the bar

--- a/chrome/skin/common/australisBar.css
+++ b/chrome/skin/common/australisBar.css
@@ -10,6 +10,9 @@
 		display: none;
 	}
 	
+	/* Bugfix: we need our add-on bar always as the last visible element, even if it physically isn't */
+	#thePuzzlePiece-addon-bar[placement="bottom"] { -moz-box-ordinal-group: 10000; }
+	
 	/* trying to use our special widgets in the menu-panel and overflow panel */
 	
 	.customization-palette .toolbarbutton-1,
